test/files/neg/macro-invalidsig-ctx-noctx.check
Macros_Test_2.scala:2: error: macro implementation has wrong shape:
 required: (c: scala.reflect.makro.Context)(x: c.Expr[Any]): c.Expr[Any]
 found   : (c: scala.reflect.makro.Context): Nothing
number of parameter sections differ
  def foo(x: Any) = macro Impls.foo
                                ^
one error found
